DNN-9908 - Fix permission grid combo selection when role name width is too long

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PermissionGrid/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PermissionGrid/style.less
@@ -1,4 +1,12 @@
 :local(.permissionGrid) {
     margin-top: -50px;
     margin-bottom: 20px;
+    .dnn-suggestion {
+        .rw-popup-container {
+            .rw-list-option {
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+    }
 }
